cmake_minimum_required(VERSION 3.22)
project(Leetcode_Optimal_Solutions)

set(CMAKE_CXX_STANDARD 17)

add_executable(Leetcode_Optimal_Solutions main.cpp AllSolutions/Solution0001.h SolutionCommon.h AllSolutions/Solution0002.h AllSolutions/Solution0009.h AllSolutions/Solution0014.h AllSolutions/Solution0026.h AllSolutions/Solution0027.h AllSolutions/Solution0190.h)
