cmake_minimum_required(VERSION 3.22)
project(Leetcode_Optimal_Solutions)

set(CMAKE_CXX_STANDARD 17)

add_executable(Leetcode_Optimal_Solutions main.cpp AllSolutions/Solution0001.h SolutionCommon.h AllSolutions/Solution0002.h AllSolutions/Solution0009.h AllSolutions/Solution0014.h AllSolutions/Solution0026.h AllSolutions/Solution0027.h AllSolutions/Solution0190.h AllSolutions/Solution0058.h AllSolutions/Solution0066.h AllSolutions/Solution0067.h AllSolutions/Solution0083.h AllSolutions/Solution0088.h AllSolutions/Solution0100.h AllSolutions/Solution0203.h AllSolutions/Solution0205.h)
