cmake_minimum_required(VERSION 3.22)
project(Leetcode_Optimal_Solutions)

set(CMAKE_CXX_STANDARD 17)

add_executable(Leetcode_Optimal_Solutions main.cpp AllSolutions/Solution0001.h SolutionCommon.h AllSolutions/Solution0002.h AllSolutions/Solution0009.h AllSolutions/Solution0014.h AllSolutions/Solution0026.h AllSolutions/Solution0027.h AllSolutions/Solution0190.h AllSolutions/Solution0058.h AllSolutions/Solution0066.h AllSolutions/Solution0067.h AllSolutions/Solution0083.h AllSolutions/Solution0088.h AllSolutions/Solution0100.h AllSolutions/Solution0203.h AllSolutions/Solution0205.h AllSolutions/Solution0003.h AllSolutions/Solution0704.h AllSolutions/Solution0035.h AllSolutions/Solution0053.h AllSolutions/Solution0104.h AllSolutions/Solution0070.h AllSolutions/Solution0007.h AllSolutions/Solution0011.h AllSolutions/Solution0020.h AllSolutions/Solution0019.h AllSolutions/Solution0237.h AllSolutions/Solution0155.h AllSolutions/Solution0136.h)
